implemented code from chapter 7

--- a/go-webdev/lenslocked.com/views/layouts/navbar.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/navbar.gohtml
@@ -18,6 +18,9 @@
         <li><a href="/contacts">Contacts</a></li>
         <li><a href="/faq">FAQ</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/signup">Sign Up</a></li>
+      </ul>
     </div>
   </div>
 </nav>
