implemented code from chapter 13

--- a/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
@@ -8,8 +8,10 @@
   <body>
     {{template "navbar"}}
     <div class="container-fluid">
-        {{template "yield" .}}
-
+        {{if .Alert}}
+            {{template "alert" .Alert}}
+        {{end}}
+        {{template "yield" .Yield}}
         {{template "footer"}}
     </div>
 
