--- a/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
@@ -6,7 +6,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    {{template "navbar"}}
+    {{template "navbar" .}}
     <div class="container-fluid">
         {{if .Alert}}
             {{template "alert" .Alert}}
