--- a/go-webdev/lenslocked.com/views/galleries/edit.gohtml
+++ b/go-webdev/lenslocked.com/views/galleries/edit.gohtml
@@ -1,29 +1,102 @@
 {{define "yield"}}
 <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Edit your gallery</h3>
-            </div>
-            <div class="panel-body">
-            {{template "editGalleryForm" .}}
-            </div>
-        </div>
+    <div class="col-md-10 col-md-offset-1">
+        <h2>Edit your gallery</h2>
+        <a href="/galleries/{{.ID}}">
+            View this gallery
+        </a>
+        <hr>
+    </div>
+    <div class="col-md-12">
+        {{template "editGalleryForm" .}}
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-1">
+        <label class="control-label pull-right">Images</label>
+    </div>
+    <div class="col-md-10">
+        {{template "galleryImages" .}}
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        {{template "uploadImageForm" .}}
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <h3>Dangerous buttons...</h3>
+        <hr>
+    </div>
+    <div class="col-md-12">
+        {{template "deleteGalleryForm" .}}
     </div>
 </div>
 {{end}}
 
 {{define "editGalleryForm"}}
-<form action="/galleries/{{.ID}}/update" method="POST">
+<form action="/galleries/{{.ID}}/update" method="POST" class="form-horizontal">
     <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title" class="form-control" id="title" 
-               placeholder="What is the title of your gallery?" value="{{.Title}}">
+        <label for="title" class="col-md-1 control-label">Title</label>
+        <div class="col-md-10">
+            <input type="text" name="title" class="form-control" id="title" placeholder="What is the title of your gallery?" value="{{.Title}}">
+        </div>
+        <div class="col-md-1">
+            <button type="submit" class="btn btn-default">Save</button>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Update</button>
 </form>
+{{end}}
 
-<form action="/galleries/{{.ID}}/delete" method="POST">
-    <button type="submit" class="btn btn-danger">Delete</button>
+{{define "deleteGalleryForm"}}
+<form action="/galleries/{{.ID}}/delete" method="POST" class="form-horizontal">
+    <div class="form-group">
+        <div class="col-md-10 col-md-offset-1">
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </div>
+    </div>
+</form>
+{{end}}
+
+{{define "uploadImageForm"}}
+<form action="/galleries/{{.ID}}/images" method="POST" enctype="multipart/form-data" class="form-horizontal">
+    <div class="form-group">
+        <label for="images" class="col-md-1 control-label">Add Images</label>
+        <div class="col-md-10">
+            <input type="file" multiple="multiple" id="images" name="images">
+            <p class="help-block">Please only use jpg, jpeg, and png.</p>
+            <button type="submit" class="btn btn-default">Upload</button>
+        </div>
+    </div>
+</form>
+{{end}}
+
+{{define "galleryImages"}}
+    {{range .ImagesSplitN 6}}
+        <div class="col-md-2">
+        {{range .}}
+            <a href="{{.Path}}">
+                <img src="{{.Path}}" class="thumbnail">
+            </a>
+            {{template "deleteImageForm" .}}
+        {{end}}
+        </div>
+    {{end}}
+
+    <style>
+        .thumbnail {
+            width: 100%;
+            margin-bottom: 6px;
+        }
+        .btn-delete {
+            margin-bottom: 6px;
+        }
+    </style>
+{{end}}
+
+{{define "deleteImageForm"}}
+<form action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete" method="POST">
+    <button type="submit" class="btn btn-default btn-delete">Delete</button>
 </form>
 {{end}}
