--- a/go-webdev/lenslocked.com/views/galleries/show.gohtml
+++ b/go-webdev/lenslocked.com/views/galleries/show.gohtml
@@ -2,7 +2,23 @@
 <div class="row">
     <div class="col-md-12">
         <h1>{{.Title}}</h1>
-        <p>Images coming soon...</p>
     </div>
 </div>
+<div class="row">
+    {{range .ImagesSplitN 3}}
+        <div class="col-md-4">
+            {{range .}}
+                <a href="{{.Path}}">
+                    <img src="{{.Path}}" class="thumbnail">
+                </a>
+            {{end}}
+        </div>
+    {{end}}
+</div>
+
+<style>
+    .thumbnail {
+        width: 100%;
+    }
+</style>
 {{end}}
