--- a/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
@@ -4,6 +4,7 @@
   <head>
     <title>LensLocked.com</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/styles.css" rel="stylesheet">
   </head>
   <body>
     {{template "navbar" .}}
