--- a/go-webdev/lenslocked.com/views/galleries/new.gohtml
+++ b/go-webdev/lenslocked.com/views/galleries/new.gohtml
@@ -15,6 +15,7 @@
 
 {{define "galleryForm"}}
 <form action="/galleries" method="POST">
+    {{csrfField}}
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" name="title" class="form-control" id="title" 
