--- a/go-webdev/lenslocked.com/views/layouts/navbar.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/navbar.gohtml
@@ -21,8 +21,10 @@
         <li><a href="/galleries">Galleries</a></li>
         {{end}}
       </ul>
-      {{if not .User}}
       <ul class="nav navbar-nav navbar-right">
+        {{if .User}}
+        <li>{{template "logoutForm"}}</li>
+        {{else}}
         <li><a href="/login">Log In</a></li>
         <li><a href="/signup">Sign Up</a></li>
       </ul>
@@ -30,4 +32,11 @@
     </div>
   </div>
 </nav>
+{{end}}
+
+{{define "logoutForm"}}
+<form class="navbar-form navbar-left" action="/logout" method="POST">
+    {{csrfField}}
+    <button type="submit" class="btn btn-default">Log out</button>
+</form>
 {{end}}
