--- a/go-webdev/lenslocked.com/views/users/signup.gohtml
+++ b/go-webdev/lenslocked.com/views/users/signup.gohtml
@@ -6,7 +6,7 @@
                 <h3 class="panel-title">Sign Up Now!</h3>
             </div>
             <div class="panel-body">
-            {{template "signupForm"}}
+            {{template "signupForm" .}}
             </div>
         </div>
     </div>
@@ -18,11 +18,13 @@
   {{csrfField}}
   <div class="form-group">
     <label for="name">Name</label>
-    <input type="text" name="name" class="form-control" id="name" placeholder="Your full name">
+    <input type="text" name="name" class="form-control" 
+           id="name" placeholder="Your full name" value="{{.Name}}">
   </div>
   <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" name="email" class="form-control" id="email" placeholder="Email">
+    <input type="email" name="email" class="form-control" 
+           id="email" placeholder="Email" value="{{.Email}}">
   </div>
   <div class="form-group">
     <label for="password">Password</label>
