implemented password reset functionality

--- a/go-webdev/lenslocked.com/views/users/login.gohtml
+++ b/go-webdev/lenslocked.com/views/users/login.gohtml
@@ -8,6 +8,9 @@
       <div class="panel-body">
         {{template "loginForm"}}
       </div>
+        <div class="panel-footer">
+            <a href="/forgot_password">Forgot your password?</a>
+        </div>
     </div>
   </div>
 </div>
