--- a/go-webdev/lenslocked.com/views/users/signup.gohtml
+++ b/go-webdev/lenslocked.com/views/users/signup.gohtml
@@ -8,6 +8,9 @@
             <div class="panel-body">
             {{template "signupForm" .}}
             </div>
+            <div class="panel-footer">
+                <a href="/login">Already have an account?</a>
+            </div>
         </div>
     </div>
 </div>
