--- a/go-webdev/lenslocked.com/views/layouts/navbar.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/navbar.gohtml
@@ -23,6 +23,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{if .User}}
+        <li><a href="/oauth/dropbox/connect">Connect Dropbox</a></li>
         <li>{{template "logoutForm"}}</li>
         {{else}}
         <li><a href="/login">Log In</a></li>
