--- a/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
+++ b/go-webdev/lenslocked.com/views/layouts/bootstrap.gohtml
@@ -21,6 +21,8 @@
     </script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
     </script>
+    {{block "js-footer" .Yield}}
+    {{end}}
   </body>
 </html>
 {{end}}
