--- a/go-webdev/lenslocked.com/views/static/home.gohtml
+++ b/go-webdev/lenslocked.com/views/static/home.gohtml
@@ -1,3 +1,4 @@
 {{define "yield"}}
-    <h1>Welcome to my awesome site!</h1>
+    <h1>Welcome to Lenslocked</h1>
+    <p> Feel free to register and start creating galleries with images</p>
 {{end}}
